@@ -26,8 +26,12 @@
 
 extern int reboot_main(int argc, char **argv)
 {
+#ifdef BB_FEATURE_LINUXRC
 	/* don't assume init's pid == 1 */
 	exit(kill(findPidByName("init"), SIGINT));
+#else
+	exit(kill(1, SIGINT));
+#endif
 }
 
 /*
